// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserDetail /> should render with given state from redux store 1`] = `
<div
  className="content-wrapper profile"
>
  <div>
    <h3
      className="profile__title"
    >
      Profile
    </h3>
  </div>
  <div>
    <h4>
      User Thumnail
    </h4>
    <img
      alt="user thumnail"
      className="user-thumnail"
      src="mock thumnail 1"
    />
    <form>
      <input
        accept="image/*"
        className="user-thumnail__input"
        onChange={[Function]}
        type="file"
        value=""
      />
      <button
        data-testid="thumnail"
        disabled={true}
        onClick={[Function]}
      >
        save
      </button>
    </form>
  </div>
  <div>
    <div>
      <h4>
        User Name
      </h4>
      <div>
        <form>
          <input
            className="input-text"
            onChange={[Function]}
            type="text"
            value="mock name 1"
          />
          <button
            data-testid="name"
            disabled={true}
            onClick={[Function]}
          >
            save
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserDetail /> should update user name 1`] = `
<div
  className="content-wrapper profile"
>
  <div>
    <h3
      className="profile__title"
    >
      Profile
    </h3>
  </div>
  <div>
    <h4>
      User Thumnail
    </h4>
    <img
      alt="user thumnail"
      className="user-thumnail"
      src="mock thumnail 1"
    />
    <form>
      <input
        accept="image/*"
        className="user-thumnail__input"
        onChange={[Function]}
        type="file"
        value=""
      />
      <button
        data-testid="thumnail"
        disabled={true}
        onClick={[Function]}
      >
        save
      </button>
    </form>
  </div>
  <div>
    <div>
      <h4>
        User Name
      </h4>
      <div>
        <form>
          <input
            className="input-text"
            onChange={[Function]}
            type="text"
            value="mock name 2"
          />
          <button
            data-testid="name"
            disabled={false}
            onClick={[Function]}
          >
            save
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserDetail /> should update user thumnail 1`] = `
<div
  className="content-wrapper profile"
>
  <div>
    <h3
      className="profile__title"
    >
      Profile
    </h3>
  </div>
  <div>
    <h4>
      User Thumnail
    </h4>
    <img
      alt="user thumnail"
      className="user-thumnail"
      src="mock thumnail 1"
    />
    <form>
      <input
        accept="image/*"
        className="user-thumnail__input"
        onChange={[Function]}
        type="file"
        value="mock thumnail 2"
      />
      <button
        data-testid="thumnail"
        disabled={false}
        onClick={[Function]}
      >
        save
      </button>
    </form>
  </div>
  <div>
    <div>
      <h4>
        User Name
      </h4>
      <div>
        <form>
          <input
            className="input-text"
            onChange={[Function]}
            type="text"
            value="mock name 1"
          />
          <button
            data-testid="name"
            disabled={true}
            onClick={[Function]}
          >
            save
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
